--- a/servidor_minecraft/plugins/ServersNPC/config.json
+++ b/servidor_minecraft/plugins/ServersNPC/config.json
@@ -1,11 +1,11 @@
 {
+  "LINE_SPACING": 0.3,
   "VIEW_DISTANCE": 32,
-  "NAMING_METHOD": "DEFAULT",
   "REPLACE_SYMBOL": "-",
   "SAVE_NPCS_DELAY_SECONDS": 600,
-  "CENTER_NPC": true,
+  "MAX_PATH_LOCATIONS": 500,
+  "NAMING_METHOD": "DEFAULT",
   "DEBUG_ENABLED": true,
-  "LINE_SPACING": 0.3,
-  "ANIMATION_RGB": false,
-  "MAX_PATH_LOCATIONS": 500
+  "CENTER_NPC": true,
+  "ANIMATION_RGB": false
 }
