--- a/servidor_minecraft/plugins/ServersNPC/config.json
+++ b/servidor_minecraft/plugins/ServersNPC/config.json
@@ -1,11 +1,11 @@
 {
-  "LINE_SPACING": 0.3,
-  "VIEW_DISTANCE": 32,
-  "REPLACE_SYMBOL": "-",
   "SAVE_NPCS_DELAY_SECONDS": 600,
   "MAX_PATH_LOCATIONS": 500,
+  "ANIMATION_RGB": false,
   "NAMING_METHOD": "DEFAULT",
   "DEBUG_ENABLED": true,
   "CENTER_NPC": true,
-  "ANIMATION_RGB": false
+  "LINE_SPACING": 0.3,
+  "REPLACE_SYMBOL": "-",
+  "VIEW_DISTANCE": 32
 }
