--- a/servidor_minecraft/plugins/TAB/config.yml
+++ b/servidor_minecraft/plugins/TAB/config.yml
@@ -14,7 +14,8 @@ header-footer:
     - "%time%"
     - ""
     - "&6IP Bedrock » "
-    - "&eIP » district-adware.gl.joinmc.link"
+    - "&6Puerto Bedrock » "
+    - "&eIP » fee-jewel.gl.joinmc.link"
     - "<#fbff01>&m                                                </#ffc101>"
   disable-condition: ''
 
