--- a/servidor_minecraft/server.properties
+++ b/servidor_minecraft/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Thu Jun 12 21:39:55 UTC 2025
+#Thu Jun 12 22:14:23 UTC 2025
 accepts-transfers=false
 allow-flight=false
 allow-nether=true
@@ -33,7 +33,7 @@ max-chained-neighbor-updates=1000000
 max-players=20
 max-tick-time=60000
 max-world-size=29999984
-motd=§c§kA§4§l Servidor en Mantenimiento y Creación §c§kA
+motd=§6§k§lA§e§l Minecraft UltraLand Server §6§k§lB§r\n                   §6§k§lc§c§l§n§o 1.21.3 §6§k§ln
 network-compression-threshold=256
 online-mode=false
 op-permission-level=4
