--- a/servidor_minecraft/plugins/TAB/config.yml
+++ b/servidor_minecraft/plugins/TAB/config.yml
@@ -13,8 +13,8 @@ header-footer:
     - ""
     - "%time%"
     - ""
-    - "&6IP Bedrock » "
-    - "&6Puerto Bedrock » "
+    - "&6IP Bedrock » germany-dave.gl.at.ply.gg "
+    - "&6Puerto Bedrock » 1998 "
     - "&eIP » fee-jewel.gl.joinmc.link"
     - "<#fbff01>&m                                                </#ffc101>"
   disable-condition: ''
