--- a/servidor_minecraft/plugins/ServersNPC/config.json
+++ b/servidor_minecraft/plugins/ServersNPC/config.json
@@ -1,11 +1,11 @@
 {
-  "CENTER_NPC": true,
-  "MAX_PATH_LOCATIONS": 500,
-  "REPLACE_SYMBOL": "-",
   "NAMING_METHOD": "DEFAULT",
-  "ANIMATION_RGB": false,
-  "VIEW_DISTANCE": 32,
+  "DEBUG_ENABLED": true,
+  "CENTER_NPC": true,
   "LINE_SPACING": 0.3,
+  "ANIMATION_RGB": false,
+  "REPLACE_SYMBOL": "-",
+  "MAX_PATH_LOCATIONS": 500,
   "SAVE_NPCS_DELAY_SECONDS": 600,
-  "DEBUG_ENABLED": true
+  "VIEW_DISTANCE": 32
 }
