--- a/servidor_minecraft/plugins/ServersNPC/config.json
+++ b/servidor_minecraft/plugins/ServersNPC/config.json
@@ -1,11 +1,11 @@
 {
-  "NAMING_METHOD": "DEFAULT",
-  "DEBUG_ENABLED": true,
-  "CENTER_NPC": true,
-  "LINE_SPACING": 0.3,
-  "ANIMATION_RGB": false,
+  "VIEW_DISTANCE": 32,
   "REPLACE_SYMBOL": "-",
-  "MAX_PATH_LOCATIONS": 500,
   "SAVE_NPCS_DELAY_SECONDS": 600,
-  "VIEW_DISTANCE": 32
+  "NAMING_METHOD": "DEFAULT",
+  "MAX_PATH_LOCATIONS": 500,
+  "DEBUG_ENABLED": true,
+  "ANIMATION_RGB": false,
+  "LINE_SPACING": 0.3,
+  "CENTER_NPC": true
 }
