--- a/servidor_minecraft/server.properties
+++ b/servidor_minecraft/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Thu Jun 12 23:15:16 UTC 2025
+#Thu Jun 12 23:23:18 UTC 2025
 accepts-transfers=false
 allow-flight=false
 allow-nether=true
@@ -61,4 +61,4 @@ text-filtering-config=
 text-filtering-version=0
 use-native-transport=true
 view-distance=10
-white-list=false
+white-list=true
