--- a/servidor_minecraft/plugins/ServersNPC/config.json
+++ b/servidor_minecraft/plugins/ServersNPC/config.json
@@ -1,11 +1,11 @@
 {
+  "CENTER_NPC": true,
+  "VIEW_DISTANCE": 32,
+  "ANIMATION_RGB": false,
+  "LINE_SPACING": 0.3,
   "REPLACE_SYMBOL": "-",
   "MAX_PATH_LOCATIONS": 500,
-  "CENTER_NPC": true,
-  "NAMING_METHOD": "DEFAULT",
-  "ANIMATION_RGB": false,
-  "VIEW_DISTANCE": 32,
   "SAVE_NPCS_DELAY_SECONDS": 600,
   "DEBUG_ENABLED": true,
-  "LINE_SPACING": 0.3
+  "NAMING_METHOD": "DEFAULT"
 }
