--- a/servidor_minecraft/server.properties
+++ b/servidor_minecraft/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Fri Jun 13 21:31:35 UTC 2025
+#Sat Jun 14 15:46:57 UTC 2025
 accepts-transfers=false
 allow-flight=false
 allow-nether=true
@@ -61,4 +61,4 @@ text-filtering-config=
 text-filtering-version=0
 use-native-transport=true
 view-distance=10
-white-list=true
+white-list=false
