--- a/servidor_minecraft/plugins/ServersNPC/config.json
+++ b/servidor_minecraft/plugins/ServersNPC/config.json
@@ -1,11 +1,11 @@
 {
-  "CENTER_NPC": true,
-  "VIEW_DISTANCE": 32,
-  "ANIMATION_RGB": false,
-  "LINE_SPACING": 0.3,
   "REPLACE_SYMBOL": "-",
+  "DEBUG_ENABLED": true,
   "MAX_PATH_LOCATIONS": 500,
   "SAVE_NPCS_DELAY_SECONDS": 600,
-  "DEBUG_ENABLED": true,
-  "NAMING_METHOD": "DEFAULT"
+  "NAMING_METHOD": "DEFAULT",
+  "CENTER_NPC": true,
+  "LINE_SPACING": 0.3,
+  "VIEW_DISTANCE": 32,
+  "ANIMATION_RGB": false
 }
