--- a/servidor_minecraft/plugins/Jobs/blockOwnerShips.yml
+++ b/servidor_minecraft/plugins/Jobs/blockOwnerShips.yml
@@ -1,2 +1,3 @@
 Furnace:
   f0999f48-4d65-3b28-b0dc-40b04d8e3b2b: world:684:123:844;world:684:124:844
+  9f68d785-ad11-3bab-bb36-393a7edbfffb: world:277:68:-771
