--- a/servidor_minecraft/plugins/Chatty/config.yml
+++ b/servidor_minecraft/plugins/Chatty/config.yml
@@ -83,7 +83,7 @@ general:
 # *aliases*      - Aliases for command. Default: empty.
 chats:
   local:
-    enable: false
+    enable: false 
     display-name: 'Local'
     format: '&e[&6Local&e] &r{prefix}{player}{suffix}&8: &f{message}'
     range: 100
@@ -94,13 +94,16 @@ chats:
   global:
     enable: true
     display-name: 'Global'
-    format: '&r{prefix} &f%player_name% {suffix} &9» &f{message}'
-    range: -2
+    format: '&r{prefix} &f&r%player_name% {suffix} &b► &f{message}'
+    range: -1
+    symbol: ''
     cooldown: -1
+    command: 'globalchat'
+    aliases: [ 'gchat' ]
 
   # Example chat with multiline format
   notify:
-    enable: false
+    enable: true
     format: |
 
       &7==========================================
@@ -130,7 +133,7 @@ pm:
   # Allows console to messaging players
   # and messaging players to console.
   # Default: false
-  allow-console: true
+  allow-console: false
 
   # Allows to PM players, that in vanish
   # Supports EssentialsX, SuperVanish, PremiumVanish, VanishNoPacket etc.
@@ -145,8 +148,8 @@ pm:
   # {sender-suffix}, {recipient-suffix} - suffixes of sender and recipient.
   # {message} - private message.
   format:
-    recipient: '{sender-prefix} &f{sender-name} &b➽ {recipient-prefix} &f{recipient-name}: &f{message}'
-    sender: '{sender-prefix} &f{sender-name} &b➽ &7{recipient-prefix}& f{recipient-name}: &f{message}'
+    recipient: '&7{sender-prefix}{sender-name} &6-> &7{recipient-prefix}{recipient-name}: &f{message}'
+    sender: '&7{sender-prefix}{sender-name} &6-> &7{recipient-prefix}{recipient-name}: &f{message}'
 
   # Plays sound to recipient
   # Remove the line if not needed.
@@ -305,7 +308,7 @@ json:
   #
   # Permission: chatty.swears.see
   swears:
-    enable: true
+    enable: false
     tooltip:
       - '&o{word}'
       - ''
@@ -488,7 +491,7 @@ moderation:
   caps:
     # On/off caps protection.
     # Bypass permission: chatty.moderation.caps
-    enable: true
+    enable: false
 
     # Minimal length of message to caps checking.
     length: 6
@@ -546,7 +549,7 @@ miscellaneous:
     # Used to switch default chat (when symbol is not specified): /chat <chat>
     # Permission: chatty.command.chat
     chat:
-      enable: false
+      enable: true
       aliases: [ 'chats', 'switchchat' ]
 
     # Clear chat for yourself: /clearchat
@@ -607,7 +610,7 @@ miscellaneous:
       enable: true
 
       # Set to '' if you want to make it hidden.
-      message: '{prefix} &e%player_name% {suffix} &ea entrado al servidor.'
+      message: '&8> &e{prefix}{player}{suffix} &se ah unido al server.'
 
       # Plays sound to all, when player joins.
       # Remove the line if not needed.
@@ -625,7 +628,7 @@ miscellaneous:
       first-join:
         # First join message.
         # Set to '' if you don't want to see special message for the first join.
-        message: '&eDenle la bienvenida a &b%player_name% porque se ah unido por primera vez al servidor.'
+        message: 'El jugador {prefix} {player} {suffix} se ah unido por primera vez al servidor'
         # Plays sound to all, when player joins.
         # Remove the line if not needed.
         sound: ORB_PICKUP
@@ -638,7 +641,7 @@ miscellaneous:
       enable: true
 
       # Set to '' if you want to make it hidden.
-      message: '&8> &e{prefix} &e%player_name% {suffix} &ese ah ido del servidor.'
+      message: '&8> &e{prefix}{player}{suffix} se ah ido del server.'
 
       # Plays sound to all, when player quits.
       # Remove the line if not needed.
@@ -656,7 +659,7 @@ miscellaneous:
       enable: true
 
       # Set to '' if you want to make it hidden.
-      message: '&e{prefix} &e%player_name% {suffix} &eah pasado por la muricion.'
+      message: '&8> &e{prefix}{player}{suffix} a pasado por la muricion.'
 
       # Plays sound to all, when player dies.
       # Remove the line if not required.
