--- a/servidor_minecraft/plugins/ServersNPC/config.json
+++ b/servidor_minecraft/plugins/ServersNPC/config.json
@@ -1,11 +1,11 @@
 {
+  "SAVE_NPCS_DELAY_SECONDS": 600,
+  "VIEW_DISTANCE": 32,
   "MAX_PATH_LOCATIONS": 500,
+  "NAMING_METHOD": "DEFAULT",
+  "DEBUG_ENABLED": true,
   "ANIMATION_RGB": false,
   "CENTER_NPC": true,
-  "VIEW_DISTANCE": 32,
-  "REPLACE_SYMBOL": "-",
-  "DEBUG_ENABLED": true,
-  "SAVE_NPCS_DELAY_SECONDS": 600,
-  "NAMING_METHOD": "DEFAULT",
-  "LINE_SPACING": 0.3
+  "LINE_SPACING": 0.3,
+  "REPLACE_SYMBOL": "-"
 }
