--- a/servidor_minecraft/plugins/ServersNPC/config.json
+++ b/servidor_minecraft/plugins/ServersNPC/config.json
@@ -1,11 +1,11 @@
 {
+  "LINE_SPACING": 0.3,
+  "MAX_PATH_LOCATIONS": 500,
   "REPLACE_SYMBOL": "-",
+  "CENTER_NPC": true,
+  "DEBUG_ENABLED": true,
+  "NAMING_METHOD": "DEFAULT",
   "VIEW_DISTANCE": 32,
   "ANIMATION_RGB": false,
-  "DEBUG_ENABLED": true,
-  "CENTER_NPC": true,
-  "NAMING_METHOD": "DEFAULT",
-  "SAVE_NPCS_DELAY_SECONDS": 600,
-  "LINE_SPACING": 0.3,
-  "MAX_PATH_LOCATIONS": 500
+  "SAVE_NPCS_DELAY_SECONDS": 600
 }
